--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
 <body>
   <div class="container">
     <h1>Order Waterproof Shirt</h1>
-    <form id="order-form" action="send_email.php" method="POST">
+
+        <!-- Form starts here -->
+        <form action="send_email.php" method="POST">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required><br><br>
+
+            <label for="address">Address:</label>
+            <input type="text" id="address" name="address" required><br><br>
+
+            <label for="phone">Phone Number:</label>
+            <input type="text" id="phone" name="phone" required><br><br>
+
+            <button type="submit">Place Order</button>
+        </form>
+        <!-- Form ends here -->
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required><br><br>
 
@@ -24,3 +38,4 @@
   </div>
 </body>
 </html>
+
