--- a/index.html
+++ b/index.html
@@ -4,11 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Order Waterproof Shirt</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <div class="container">
-    <h1>Order Waterproof Shirt</h1>
 
         <!-- Form starts here -->
         <form action="send_email.php" method="POST">
@@ -24,6 +19,12 @@
             <button type="submit">Place Order</button>
         </form>
         <!-- Form ends here -->
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div class="container">
+    <h1>Order Waterproof Shirt</h1>
+    <form id="order-form" action="send_email.php" method="POST">
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required><br><br>
 
